--- a/src/main/resources/view/ContactListCard.fxml
+++ b/src/main/resources/view/ContactListCard.fxml
@@ -29,95 +29,48 @@
         </Label>
         <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
       </HBox>
-      <Label fx:id="email" wrapText="false" managed="false" styleClass="cell_small_label" text="\$email" />
+      <Label fx:id="email" managed="false" visible="false" styleClass="cell_small_label" text="\$email" />
 
       <!-- Optional fields -->
       <!-- phone -->
-      <HBox>
-        <ImageView fx:id="phoneIcon" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true"
-                preserveRatio="true" managed="false" visible="false">
-           <Image url="@../images/phone.png" />
-        </ImageView>
-        <HBox>
-          <padding>
-            <Insets left="5" />
-          </padding>
-          <Label fx:id="phone" managed="false" styleClass="cell_small_label" text="\$phone" />
-        </HBox>
-      </HBox>
+      <Label fx:id="phone" managed="false" visible="false" styleClass="cell_small_label" text="\$phone" />
 
       <!-- address -->
-      <HBox>
-        <ImageView fx:id="addressIcon" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true"
-                   preserveRatio="true" managed="false" visible="false">
-          <Image url="@../images/address.png" />
-        </ImageView>
-        <HBox>
-          <padding>
-            <Insets left="5" />
-          </padding>
-          <Label fx:id="address" managed="false" styleClass="cell_small_label" text="\$address" />
-        </HBox>
-      </HBox>
+      <Label fx:id="address" managed="false" visible="false" styleClass="cell_small_label" text="\$address" />
 
       <!-- telegram handle -->
-      <HBox>
-        <ImageView fx:id="telegramIcon" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true"
-                   preserveRatio="true" managed="false" visible="false">
-          <Image url="@../images/telegram.png" />
-        </ImageView>
-        <HBox>
-          <padding>
-            <Insets left="5" />
-          </padding>
-          <Label fx:id="telegramHandle" managed="false" styleClass="cell_small_label" text="\$telegramHandle" />
-        </HBox>
-      </HBox>
+      <Label fx:id="telegramHandle" managed="false" visible="false" styleClass="cell_small_label" text="\$telegramHandle" />
 
       <!-- zoom -->
-      <HBox fx:id="zoom" >
-        <padding>
-          <Insets top="2" bottom="2" />
-        </padding>
-        <ImageView fx:id="zoomIcon" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true"
-                   preserveRatio="true" >
-        </ImageView>
-        <HBox>
-          <padding>
-            <Insets left="5" />
-          </padding>
-          <Label fx:id="zoomText" styleClass="cell_small_label" text="\$zoom" />
-        </HBox>
-      </HBox>
+      <Label fx:id="zoom" managed="false" visible="false" styleClass="cell_small_label" text="\$zoom" />
 
       <!-- links -->
       <HBox>
         <padding>
           <Insets top="2" bottom="2" />
         </padding>
-        <Label fx:id="linksLabel" styleClass="cell_small_label" text="Linked events: " managed="false" >
+        <Label fx:id="linksIcon" styleClass="cell_small_label" managed="false" visible="false" >
           <minWidth>
             <!-- Ensures that the label text is never truncated -->
             <Region fx:constant="USE_PREF_SIZE" />
           </minWidth>
         </Label>
-        <FlowPane fx:id="links" managed="false" />
+        <HBox>
+          <padding>
+            <Insets left="2" top="3" />
+          </padding>
+          <FlowPane fx:id="links" managed="false" />
+        </HBox>
       </HBox>
 
       <!-- tags -->
       <HBox>
-        <padding>
-          <Insets top="2" bottom="2" />
-        </padding>
-        <ImageView fx:id="tagIcon" fitHeight="20.0" fitWidth="20.0"
-                   preserveRatio="true">
-          <Image url="@../images/tag.png" />
-        </ImageView>
+        <Label fx:id="tagIcon" managed="false" visible="false" />
         <HBox>
           <padding>
-            <Insets left="5" />
+            <Insets left="2" top="3" />
           </padding>
-          <FlowPane fx:id="tags" managed="false" />
+          <FlowPane fx:id="tags" />
         </HBox>
       </HBox>
     </VBox>
