--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
@@ -57,7 +56,7 @@
             <padding>
               <Insets right="10" bottom="10" left="10" />
             </padding>
-            <Label fx:id="contact" text="Your contacts" alignment="TOP_CENTER"></Label>
+            <Label fx:id="contact" text="Contacts" alignment="TOP_CENTER"></Label>
             <StackPane fx:id="contactListPanelPlaceholder" VBox.vgrow="ALWAYS" HBox.hgrow="ALWAYS"/>
           </VBox>
 
@@ -67,7 +66,7 @@
             <padding>
               <Insets right="10" bottom="10" left="10" />
             </padding>
-            <Label fx:id="event" text="Your events" alignment="TOP_CENTER"></Label>
+            <Label fx:id="event" text="Events" alignment="TOP_CENTER"></Label>
             <StackPane fx:id="eventListPanelPlaceholder" VBox.vgrow="ALWAYS" HBox.hgrow="ALWAYS"/>
           </VBox>
         </HBox>
