--- a/src/main/resources/view/EventListCard.fxml
+++ b/src/main/resources/view/EventListCard.fxml
@@ -29,30 +29,61 @@
                         <Region fx:constant="USE_PREF_SIZE" />
                     </minWidth>
                 </Label>
+                <!-- event name -->
                 <Label fx:id="eventName" onMouseClicked="#copyName" styleClass="cell_big_label" text="\$first" />
             </HBox>
-            <Label fx:id="from" managed="false" onMouseClicked="#copyStartDateTime" styleClass="cell_small_label" text="\$from" />
-            <!-- Optional fields-->
-            <Label fx:id="to" managed="false" onMouseClicked="#copyEndDateTime" styleClass="cell_small_label" text="\$to" />
-            <Label fx:id="address" managed="false" onMouseClicked="#copyAddress" styleClass="cell_small_label" text="\$address" />
-            <HBox>
-                <Label fx:id="zoomLinkTitle" managed="false" styleClass="cell_small_label"/>
-                <Label fx:id="zoom" managed="false" onMouseClicked="#openZoomLink" styleClass="cell_small_label" text="\$meeting-link"/>
-            </HBox>
-            <Label fx:id="description" managed="false" onMouseClicked="#copyDescription" styleClass="cell_small_label" text="\$description" />
+
+            <!-- start date -->
+            <Label fx:id="from" managed="false" visible="false" onMouseClicked="#copyStartDateTime"
+                   styleClass="cell_small_label" text="\$from" />
+
+            <!-- Optional fields -->
+            <!-- end date -->
+            <Label fx:id="to" managed="false" visible="false" onMouseClicked="#copyEndDateTime"
+                   styleClass="cell_small_label" text="\$to" />
+
+            <!-- address -->
+            <Label fx:id="address" managed="false" visible="false" onMouseClicked="#copyAddress"
+                   styleClass="cell_small_label" text="\$address" />
+
+            <!-- zoom -->
+            <Label fx:id="zoom" managed="false" visible="false" onMouseClicked="#openZoomLink"
+                   styleClass="cell_small_label" text="\$meeting-link"/>
+
+            <!-- description -->
+            <Label fx:id="description" managed="false" visible="false" onMouseClicked="#copyDescription"
+                   styleClass="cell_small_label" text="\$description" />
+
+            <!-- links -->
             <HBox>
                 <padding>
-                    <Insets top="5" />
+                    <Insets top="2" bottom="2" />
                 </padding>
-                <Label fx:id="linksLabel" styleClass="cell_small_label" text="Linked contacts: " managed="false" >
+                <Label fx:id="linkToContact" styleClass="cell_small_label" managed="false"
+                       visible="false">
                     <minWidth>
                         <!-- Ensures that the label text is never truncated -->
                         <Region fx:constant="USE_PREF_SIZE" />
                     </minWidth>
                 </Label>
-                <FlowPane fx:id="links" managed="false" />
+                <HBox>
+                    <padding>
+                        <Insets left="2" top="3" />
+                    </padding>
+                    <FlowPane fx:id="links" managed="false" />
+                </HBox>
+
+            <!-- tags -->
             </HBox>
-            <FlowPane fx:id="tags" managed="false" />
+                <HBox>
+                    <Label fx:id="tagIcon" managed="false" visible="false" />
+                <HBox>
+                    <padding>
+                        <Insets left="2" top="3" />
+                    </padding>
+                    <FlowPane fx:id="tags" />
+                </HBox>
+            </HBox>
         </VBox>
     </GridPane>
 </HBox>
