--- a/src/main/resources/view/ContactListCard.fxml
+++ b/src/main/resources/view/ContactListCard.fxml
@@ -45,26 +45,41 @@
 
       <!-- telegram handle -->
       <Label fx:id="telegramHandle" managed="false" visible="false" onMouseClicked="#openTelegramHandle"
-             styleClass="cell_small_label, clickable, linkable" text="\$telegramHandle" />
+             styleClass="cell_small_label, clickable" text="\$telegramHandle" />
 
       <!-- zoom -->
       <Label fx:id="zoom" managed="false" visible="false" onMouseClicked="#openZoomLink"
-             styleClass="cell_small_label, clickable, linkable" text="\$zoom" />
+             styleClass="cell_small_label, clickable" text="\$zoom" />
 
       <!-- links -->
       <HBox fx:id="linksHBox" styleClass="clickable">
         <padding>
-          <Insets top="5" />
+          <Insets top="2" bottom="2" />
         </padding>
-        <Label fx:id="linksLabel" styleClass="cell_small_label" text="Linked events: " managed="false" >
+        <Label fx:id="linkToEvent" styleClass="cell_small_label" managed="false" visible="false" >
           <minWidth>
             <!-- Ensures that the label text is never truncated -->
             <Region fx:constant="USE_PREF_SIZE" />
           </minWidth>
         </Label>
-        <FlowPane fx:id="links" managed="false" />
+        <HBox>
+          <padding>
+            <Insets left="2" top="3" />
+          </padding>
+          <FlowPane fx:id="links" managed="false" />
+        </HBox>
       </HBox>
-      <FlowPane fx:id="tags" managed="false" />
+
+      <!-- tags -->
+      <HBox>
+        <Label fx:id="tagIcon" managed="false" visible="false" />
+        <HBox>
+          <padding>
+            <Insets left="2" top="3" />
+          </padding>
+          <FlowPane fx:id="tags" managed="false" />
+        </HBox>
+      </HBox>
     </VBox>
   </GridPane>
 </HBox>
